<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_reservation"
        android:icon="@drawable/ic_confirmation_number_black_24dp"
        android:title="@string/title_reservations" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_add_cinema"
        android:icon="@drawable/ic_add_movie_black_24dp"
        android:title="@string/add_cinema" />

    <item
    android:id="@+id/navigation_about_app"
    android:icon="@drawable/ic_about"
    android:title="@string/about_app" />



</menu>

<!--<item-->
<!--android:id="@+id/navigation_add_film"-->
<!--android:icon="@drawable/ic_add_movie_black_24dp"-->
<!--android:title="@string/add_film" />-->

    <!--    <item-->
    <!--    android:id="@+id/navigation_settings"-->
    <!--    android:icon="@drawable/ic_add_movie_black_24dp"-->
    <!--    android:title="@string/settings" />-->

<!--<item-->
<!--android:id="@+id/navigation_contacts_us"-->
<!--android:icon="@drawable/ic_add_movie_black_24dp"-->
<!--android:title="@string/contact_us" />-->