<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        tools:context=".view.AddMovieActivity">

        <TextView
            android:id="@+id/tvAddMovie"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_horizontal"
            android:text="@string/add_a_movie"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewMovieTitle"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/movie_title"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editMovieTitle"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="12dp"
            android:layout_margin="10dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/introduce_movie_title"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnSalvare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/button_rounded_corners"
            android:text="@string/salvare" />

    </LinearLayout>
</ScrollView>