<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutLoginMada"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login"
    tools:context=".LoginActivityMADA">

    <EditText
        android:id="@+id/etEmailLogin"
        style="@style/EditTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:autofillHints="@string/email"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_baseline_email_24" />

    <EditText
        android:id="@+id/etPasswordLogin"
        style="@style/EditTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmailLogin"
        android:layout_centerHorizontal="true"
        android:autofillHints="@string/password"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_baseline_lock_24" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasswordLogin"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_rounded_corners"
        android:drawableEnd="@drawable/ic_baseline_login_24"
        android:text="@string/login"
        android:drawableRight="@drawable/ic_baseline_login_24" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasswordLogin"
        android:layout_marginStart="190dp"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/btnLogin"
        android:layout_toRightOf="@+id/btnLogin"
        android:background="@drawable/button_rounded_corners"
        android:text="@string/register" />

</RelativeLayout>